public interface ScoreStats {
    public int getScore();
}